			  - 2003-09-17:  Fixed E_ALL warning on line 203 of lib-permissions  (Matteo)
			  - 2003-09-24:  Fixed bug in revision check that caused modified file warnings  (Niels)
			  - 2003-09-29:  Added missing CSS definitions to RTL-text stylesheet  (Niels)
			  - 2003-09-29:  &amp;'s are now properly removed from URLs before converting them  (Niels)


v 2.0rc4.2		+ Misc changes
			  - 2003-07-29:  Created new artwork for the installer  (Niels)
			  - 2003-07-27:  Reordered the install pages  (Niels)
			  - 2003-07-27:  Added integrity check of the files to the installer and updater  (Niels)
                          - 2003-07-27:  Added a check to see if the cache dir is writable to the updater  (Niels)
			  - 2003-07-27:  Added a check to see if magic_quotes_sybase is turned off to the installer and updater  (Niels)
			  - 2003-07-27:  Raised the minumum required version of PHP to 4.0.3  (Niels)

			+ Misc bugfixes
			  - 2003-07-17:  Report were created without delimiters/quotes with register globals off  (Matteo)
			  - 2003-07-20:  Added exceptions to bannerid requirement for banner-activate and banner-delete  (Niels)
			  - 2003-07-23:  Added missing style definitions for banner append to the css file  (Niels)
			  - 2003-07-27:  Fixed Javascript error during form submit on zone-advanced page when using text ads  (Niels)
			  - 2003-07-27:  Appended HTML to a text ad zone wasn't saved at all  (Niels)
			  - 2003-07-29:  The search box is no longer visible during an upgrade  (Niels)


v 2.0rc4.1		+ Misc bugfixes
			  - 2003-07-09:  HTML banner preview wasn't working: it redirected to client-index instead  (Matteo)
			  - 2003-07-09:  Fixed division by zero error in lib-priority that could have been generated on line 886  (Matteo)
			  - 2003-07-09:  Userlog index wasn't working: it caused an endless redirection loop  (Matteo)
			  - 2003-07-10:  Userlog delete didn't work  (Matteo)